--- a/theme/modules/change-logo.css
+++ b/theme/modules/change-logo.css
@@ -5,7 +5,7 @@
 */
 
 :root {
-    --logo-url: url('https://cdn.jsdelivr.net/gh/classicalDonkey/Jamfin@main/assets/banner2.png');
+    --logo-url: url('https://cdn.jsdelivr.net/gh/classicalDonkey/Jamfin@main/assets/banner.png');
 }
 
 .pageTitleWithDefaultLogo,
